// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    three
     
    expenses
     totaling
     
    Rs 123,456,789
    .
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    one
     
    expense
     totaling
     
    Rs 35
    .
  </h1>
</div>
`;
